<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F5F5"
    android:orientation="vertical"
    tools:context=".DetalhesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_detalhes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_no_photos" />

        <TextView
            android:id="@+id/nome_detalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_horizontal"
            android:text="@string/nome_produto"
            android:textColor="#2E2E2E"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/tamanhos_detalhes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Tamanhos" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:foregroundGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/valor_detalhes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/valor_produto"
                android:textColor="#009688"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valor_reg_detalhes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/valor_detalhes"
                android:layout_marginLeft="10dp"
                android:text="@string/valor_regular"
                android:textColor="#8E8E8E"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/parcelar_produc_detalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/parcelar"
            android:textColor="#E82E2E2E"
            android:textSize="12dp"
            android:textStyle="normal" />

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_button_comprar"
            android:text="@string/comprar"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>